# Habitat

./: .editorconfig  .gitignore  .gitmodules  README.md  plan.md  research.md
.github/agents/: sdlc_agent.md
.github/workflows/: idl-check.yml
solana/: ABI_COMPATIBILITY.md  Anchor.toml  Cargo.toml  Makefile
solana/e2e/: e2e.ts  package-lock.json  package.json
solana/scripts/: bootstrap-local-validator.sh
solana/src/: config.rs  error.rs  events.rs  idl.rs  lib.rs  types.rs
solana/src/instructions/: claim_timeout.rs  initialize_pledge.rs  mod.rs  pledge_resolution.rs  resolve_failure.rs  resolve_success.rs
solana/src/state/: mod.rs  pledge_state.rs  resolution_receipt.rs
solana/tests/: integration_pledge_amount_rent.rs
