[package]
name = "habitat-settlement-program"
version = "0.1.0"
edition = "2021"

[lib]
name = "habitat_settlement_program"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.2"

[dev-dependencies]
solana-program-test = "2.3"
solana-sdk = "2.3"
tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(target_os, values("solana"))',
	'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
] }